(Format: Year/Month/Day)
Changes for 0.9.11
*04/09/02:
  * Fix crash when in windowmenu->submenu and closing the app (Mathias)
    Remember.cc
-------------------------------------------------------
Changes for 0.9.10:
*04/09/01:
  * Fix width of a menuentry (Mathias)
    FbTk/MenuItem.cc
*04/08/31:
  * Fixed restart issue with system tray (Henrik)
    SystemTray.cc
  * Fixed multiple screen issues with system tray (Henrik)
    SystemTray.cc
  * Check for iconv function (Henrik)
    configure.in, Font.hh/cc
  * Fix for gcc 2.95.4 issues with "typeid" and "make_pair",
    Fix for a MIPSPro 7.30 issue (Mathias)
    Slit.cc Toolbar.cc FbTk/KeyUtil.cc
  * Check for C++ std headers, some older machines dont have them (Simon)
    configure.in  src/<MANY>.hh/cc
*04/08/30:
  * Changed session.screen<num>.iconbar.clientWidth to
    session.screen<num>.iconbar.iconWidth
    (Henrik)
    IconbarTool.cc
  * Added RaiseLayer and LowerLayer to the commands (Mathias)
    FbCommandFactory.cc
  * Close bug #1013735, #1012314, #977054 (Mathias)
    Screen.cc Slit.cc FbCommands.cc
  * Fix bug in menu-closing with keys (Mathias)
    FbTk/Menu.cc
*04/08/29:
  * Added [wallpapers|wallpapermenu|rootcommands] to possible
    menuitems (Mathias)
       [wallpapers] (directory) {rootcommand}
    creates a submenu in the menu to click on the wallpaper one
    wants. default rootcommand is fbsetbg
    MenuCreator.cc RootCmdMenuItem.cc RootCmdMenuItem.hh
  * Fix cycling using keys in menus (didn't wrap upwards) (Simon)
    FbTk/Menu.cc
  * Fix rendering bug when revisiting >1 column menus (Simon)
    FbTk/Menu.cc
  * Fix crash when extramenus not attached to windowmenu (Simon)
    - and add checking that windowmenu file exists and sorta parses
    Window.cc FbTk/Menu.hh MenuCreator.hh/cc
  * Tweak toolbar size/position (esp when 100% width)  (Simon)
    - and fix menu size bug when initialising with no style
    Toolbar.cc FbTk/MenuTheme.cc